--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Himanshu Dixit</title>
+    <title>Naman jain</title>
   </head>
   <body>
     <img src="img/icon.png" />
@@ -9,23 +9,23 @@
       <tbody>
         <tr>
           <td>Name</td>
-          <td><strong>Himanshu Dixit</strong></td>
+          <td><strong>Naman jain</strong></td>
         </tr>
         <tr>
           <td>Email</td>
-          <td><i>hudixt@gmail.com</i></td>
+          <td><i>namanjain.it19@jecrc.ac.in</i></td>
         </tr>
         <tr>
           <td>Hobbies</td>
-          <td>Blogging,Cooking,Cricket,Badminton,Table Tennis</td>
+          <td>Cooking,Cricket,Badminton,</td>
         </tr>
         <tr>
           <td>A.K.A.</td>
-          <td>HUDIXT,himanshu-dixit</td>
+          <td>NJ,naman jain</td>
         </tr>
         <tr>
           <td>Ask Me</td>
-          <td>Coding,Product Desgin,UI/UX Design,Sports,Technology,Politics</td>
+          <td>Coding,Sports,Technology,Politics</td>
         </tr>
         <tr>
           <td>Music</td>
