--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
           <td>My favorite song</td>
           <td><iframe width="560" height="315" src="https://www.youtube.com/embed/nYh-n7EOtMA" frameborder="0" allowfullscreen></iframe></td>
         </tr>
-      </tbody>
+         <td>My<br>profile</td>
+          <td><a href="https://github.com/Naman27">Silicon Valley</a></td>
+        </tr>
+        </tbody>
     </table>
   </body>
 </html>
